--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -4,6 +4,7 @@ channels:
   - krinsman # jupyterlab_html
   - defaults
 dependencies:
+  - pyyaml # for postBuild script
   - jupyterlab-unfold # https://github.com/jupyterlab-contrib/jupyterlab-unfold
   - jupyterlab_html # https://github.com/QuantStack/jupyterlab-drawio
   - jupyterlab-lsp # https://github.com/jupyter-lsp/jupyterlab-lsp
