Added -latex, side-car, code-formatter libraries

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -7,6 +7,9 @@ dependencies:
   - jupyterlab >= 3.0
   - pyyaml # for postBuild script
   - jupyterlab-unfold # https://github.com/jupyterlab-contrib/jupyterlab-unfold
-  - jupyterlab-lsp # https://github.com/jupyter-lsp/jupyterlab-lsp
   - jupyterlab-git # https://github.com/jupyterlab/jupyterlab-git
+  - jupyterlab-latex # https://github.com/jupyterlab/jupyterlab-latex
+  - jupyterlab-lsp # https://github.com/jupyter-lsp/jupyterlab-lsp
+  - jupyterlab-sidecar # https://github.com/jupyter-widgets/jupyterlab-sidecar
+  - jupyterlab_code_formatter # https://github.com/ryantam626/jupyterlab_code_formatter 
   - jupyterlab-variableinspector # https://github.com/lckr/jupyterlab-variableInspector
